# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

# meson file, for building this example as part of a main DPDK build.
#
# To build this example as a standalone application with an already-installed
# DPDK instance, use 'make'

allow_experimental_apis = true
sources = files(
        'tcpoptim.c',
        'tcp_process.c',
        'tfo_wrapper.c',
        'tfo_worker.c',
        'win_minmax.c',
)
