noinst_HEADERS = linux_container_of.h \
		 linux_jhash.h \
		 linux_list.h \
		 linux_rbtree_augmented.h \
		 linux_rbtree.h \
		 tfo_list.h \
		 tcp_process.h \
		 tfo_rbtree.h \
		 tfo_worker.h \
		 tfo_worker_types.h \
		 win_minmax.h

pkginclude_HEADERS = \
		 tfo.h \
		 tfo_options.h \
		 tfo_printf.h \
		 util.h
